--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.5608f.js" charset="utf-8"></script>
+<script src="src/settings.31533.js" charset="utf-8"></script>
 
-<script src="main.35842.js" charset="utf-8"></script>
+<script src="main.3460e.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
